--- a/values.yml
+++ b/values.yml
@@ -1,3 +1,3 @@
 myRepo:
-  gitProvider: my_github
-  path: jfrog/jfrog-pipelines-simple-example
+  gitProvider: POC
+  path: mudassirwe1/jfrog-pipelines-simple-example
